# rk3588-npu-demos

Python/: README.md  pyproject.toml
Python/docs/: overview.md
docs/: model-analysis.md  o.md  overview.md
