[project]
name = "rknn-python-demos"
version = "1.0.0"
description = "Python NPU demos for RK3588 devices using RKNN Lite"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "rknn-toolkit-lite2 @ file:///workspace/Python/wheel/rknn_toolkit_lite2-1.3.0-cp310-cp310-linux_aarch64.whl",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv-specific configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[project.scripts]
# Demo scripts
face-mask = "face_mask.face_mask:main"
face-mask-cap = "face_mask.face_mask_cap:main"
inception = "inceptionv3.inceptionv3:main"
resnet = "resnet18.resnet18:main"
ssd = "ssd.ssd:main"
